tests/ui/discord-frontend/entity_macro/field_does_not_exist.stderr
error: field `id` cannot be found in type `twilight_model::guild::Guild`
  --> tests/ui/discord-frontend/entity_macro/field_does_not_exist.rs:39:45
   |
LL |     relates = [multiple "MemberEntity": via "id" as "guild_id"]
   |                                             ^^^^

error: aborting due to 1 previous error

